# net-mon

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
net_mon/: main.py  network_latency_monitor.py
systemd/: install.sh  network-health-watcher.conf  network-health-watcher.service  network-health-watcher.sh  network-health-watcher.timer
tests/: test_network_latency_monitor.py
